refactored Client files